[workspace]

members = [
    "options/common/",
    "options/async_rustbus/",
    "options/dbus_bytestream/",
    "options/dbus_message_parser/",
    "options/dbus_native/",
    "options/dbus_pure//",
    "options/dbusrs/",
    "options/rustbus/",
    "options/zvariant/",
]

[profile.release]
lto = true
codegen-units = 1
strip = true
